--- a/11-step-by-step-secure.Rmd
+++ b/11-step-by-step-secure.Rmd
@@ -10,7 +10,7 @@ try({
 # Build Yourself a Safety Net {#build-yourself-safety-net}
 
 > Don't fuck over Future You
-> 
+>
 > _JD_ (<https://twitter.com/CMastication>)
 
 Strengthening your app means two things: testing and locking the application environment.
@@ -52,7 +52,7 @@ Here is an example of testing that the `meaning_of_life` will always be `42`.
 # Creating a testing context, with one expectation
 test_that("The meaning of life is 42", {
   expect_equal(
-    meaning_of_life(), 
+    meaning_of_life(),
     42
   )
 })
@@ -84,7 +84,7 @@ computation_module_server <- function(input, output, session){
   observeEvent( input$selector , {
     r$value <- input$selector * 10
   })
-  
+
 }
 
 # We can test it that way
@@ -136,7 +136,7 @@ await page.waitForSelector('.row > .col > \
     // Now it's ready, we can click on it
     await page.click('.row > .col > .rounded > \
     details:nth-child(3) > summary')
-    
+
     // Now our test is over, we can close the connection
     await browser.close()
 })()
@@ -159,13 +159,13 @@ Here is an example:
 ```{r 11-step-by-step-secure-3, eval = FALSE}
 # Creating a new test instance
 test <- crrry::CrrryOnPage$new(
-  # Using the `find_chrome()` function to guess where the 
+  # Using the `find_chrome()` function to guess where the
   # Chrome bin is on our machine
   chrome_bin = pagedown::find_chrome(),
   # Launching Chrome on a random available port on our machine
-  # Note that you will need httpuv >= 1.5.2 if you want to use 
+  # Note that you will need httpuv >= 1.5.2 if you want to use
   # this function
-  chrome_port = httpuv::randomPort(), 
+  chrome_port = httpuv::randomPort(),
   # Specifying the page we want to connect to
   url = "https://connect.thinkr.fr/hexmake/",
   # Do everything on the terminal, with no window open
@@ -175,9 +175,9 @@ test <- crrry::CrrryOnPage$new(
 
     Running \
       '/Applications/Google Chrome.app/Contents/MacOS/Google Chrome'
-      --no-first-run --headless 
+      --no-first-run --headless
       '--user-data-dir=/Users/colin/Library/Application Support/
-        r-crrri/chrome-data-dir-dhutmfux' 
+        r-crrri/chrome-data-dir-dhutmfux'
       '--remote-debugging-port=40698'
 
 ```{r 11-step-by-step-secure-4, eval = FALSE}
@@ -202,7 +202,7 @@ for (i in letters[1:5]){
   # We'll be setting a series of letters, one by one
   # for the package name input
   test$shiny_set_input(
-    "main_ui_1-left_ui_1-pkg_name_ui_1-package", 
+    "main_ui_1-left_ui_1-pkg_name_ui_1-package",
     i
   )
 }
@@ -258,13 +258,13 @@ With `{crrry}`, this `gremlins` test comes for free:
 ```{r 11-step-by-step-secure-8, eval = FALSE}
 # Creating a new test instance
 test <- crrry::CrrryOnPage$new(
-  # Using the `find_chrome()` function to guess where the 
+  # Using the `find_chrome()` function to guess where the
   # Chrome bin is on our machine
   chrome_bin = pagedown::find_chrome(),
   # Launching Chrome on a random available port on our machine
-  # Note that you will need httpuv >= 1.5.2 if you want to use 
+  # Note that you will need httpuv >= 1.5.2 if you want to use
   # this function
-  chrome_port = httpuv::randomPort(), 
+  chrome_port = httpuv::randomPort(),
   # Specifying the page we want to connect to
   url = "https://connect.thinkr.fr/hexmake/",
   # Do everything on the terminal, with no window open
@@ -292,7 +292,7 @@ If you are building your application with `{golem}` [@R-golem], you will need to
 ```{r 11-step-by-step-secure-9, eval = FALSE}
 # Create an app.R file at the root of the package
 golem::add_rstudioconnect_file()
-# Launch a test, and record a series of 
+# Launch a test, and record a series of
 # snapshots of your application
 shinytest::recordTest()
 ```
@@ -333,11 +333,11 @@ library(shinyloadtest)
 ```{r 11-step-by-step-secure-14, eval = FALSE}
 # Starting your app in another process
 p <- processx::process$new(
-  "Rscript", 
+  "Rscript",
   c( "-e",  "options('shiny.port'= 2811);hexmake::run_app()" )
 )
 # We wait for the app to be ready
-Sys.sleep(5) 
+Sys.sleep(5)
 # Check that the process is alive
 p$is_alive()
 # Open the app in our browser just to be sure
@@ -354,9 +354,9 @@ withr::with_dir(
   "shinylogs", {
     # Launch the recording of an app session, using port 1234
     shinyloadtest::record_session(
-      "http://localhost:2811", 
+      "http://localhost:2811",
       port = 1234
-    ) 
+    )
   }
 )
 ```
@@ -490,20 +490,20 @@ Sys.sleep(5)
 ```
 
 ```{r 11-step-by-step-secure-27, eval = FALSE}
-# We are launching the docker container 
-# using R system() command. Here, we are 
-# running the container image called 
-# colinfay/hexmake. We are naming the 
-# container hexmake using the --name flag, 
-# --rm means the container will be removed 
-# when stopped, and finally the -p flag defines 
+# We are launching the docker container
+# using R system() command. Here, we are
+# running the container image called
+# colinfay/hexmake. We are naming the
+# container hexmake using the --name flag,
+# --rm means the container will be removed
+# when stopped, and finally the -p flag defines
 # how to bind the ports of the container
 # with the ports of the host (left is the host,
-#  right is the container): in other word, here, 
+#  right is the container): in other word, here,
 #  we bind port 80 of our container to the port 2811
 # of our machine.
 system(
-  "docker run --name hexmake --rm -p 2811:80 colinfay/hexmake", 
+  "docker run --name hexmake --rm -p 2811:80 colinfay/hexmake",
   wait = FALSE
 )
 ```
@@ -511,7 +511,7 @@ system(
 Let's say now we want the stats for the hexmake container:
 
 ```{r 11-step-by-step-secure-28, eval = FALSE, cache=TRUE}
-# Waiting for the container to be ready 
+# Waiting for the container to be ready
 Sys.sleep(30)
 # Showing the docker stats for hexmake
 tibble::as_tibble(
@@ -520,11 +520,11 @@ tibble::as_tibble(
 ```
 
 ```{r echo = FALSE}
-structure(list(Container = "hexmake", Name = "hexmake", ID = "34cc1544556a", 
-    CPUPerc = 0.37, MemUsage = "108.5MiB", MemLimit = "5.807GiB", 
-    MemPerc = 1.82, NetI = "726B", NetO = "0B", BlockI = "0B", 
-    BlockO = "0B", PIDs = 4L, record_time = "2021-07-16 12:19:52", 
-    extra = ""), row.names = c(NA, -1L), class = c("tbl_df", 
+structure(list(Container = "hexmake", Name = "hexmake", ID = "34cc1544556a",
+    CPUPerc = 0.37, MemUsage = "108.5MiB", MemLimit = "5.807GiB",
+    MemPerc = 1.82, NetI = "726B", NetO = "0B", BlockI = "0B",
+    BlockO = "0B", PIDs = 4L, record_time = "2021-07-16 12:19:52",
+    extra = ""), row.names = c(NA, -1L), class = c("tbl_df",
 "tbl", "data.frame"))
 ```
 
@@ -536,7 +536,7 @@ To do that, we can replay our `shinycannon` call, and at the same time use the `
 
 ```{bash 11-step-by-step-secure-29, eval = FALSE}
 # Replaying the recording
-shinycannon shinylogs/recording.log \ 
+shinycannon shinylogs/recording.log \
 # Specificying the host url and the number of "visitors"
   http://localhost:2811 --workers 10 \
 # Define where the recording will be outputed
@@ -547,16 +547,16 @@ Let's launch at the same time a `dockerstats_recurse()`.
 For example, here, we will print, on each loop, the `MemUsage` of the container, then save the data inside a `dockerstats.csv` file.
 
 ```{r 11-step-by-step-secure-30, eval = FALSE}
-# Calling recursive the dockerstats function. 
+# Calling recursive the dockerstats function.
 # The callback function takes a function, and define
-# what to do with the data.frame each time the 
+# what to do with the data.frame each time the
 # dockerstats results are computed.
 dockerstats_recurse(
   "hexmake",
-  # append_csv is a {dockerstats} function that will 
+  # append_csv is a {dockerstats} function that will
   # apped the output to a given csv
   callback = append_csv(
-    file = "shinylogs/dockerstats.csv", 
+    file = "shinylogs/dockerstats.csv",
     print = TRUE
   )
 )
@@ -574,7 +574,7 @@ As you can see, as the number of connections grow, the memory usage grows.
 And we now have a csv with the evolution of the `docker stats` records over time!
 
 ```{r 11-step-by-step-secure-32 }
-# read_appended_csv() allows to read a csv that has been 
+# read_appended_csv() allows to read a csv that has been
 # constructed with the append_csv() function
 docker_stats <- read_appended_csv(
   "shinylogs/dockerstats.csv"
@@ -596,10 +596,10 @@ Let's record the computation of the `hexmake` container containing the same app 
 First, launch the container:
 
 ```{r 11-step-by-step-secure-35 }
-# Launching the container a second time, 
+# Launching the container a second time,
 # but name it xmk2 and serve it on port 2708
 system(
-  "docker run -p 2708:80 --rm --name xmk2 -d colinfay/hexmake", 
+  "docker run -p 2708:80 --rm --name xmk2 -d colinfay/hexmake",
   wait = FALSE
 )
 Sys.sleep(60) # Let the container launch
@@ -608,7 +608,7 @@ Sys.sleep(60) # Let the container launch
 Then, a `{crrry}` job:
 
 ```{r 11-step-by-step-secure-36, eval = FALSE, echo = TRUE}
-# See previous version of this code for a commented explanation 
+# See previous version of this code for a commented explanation
 test <- crrry::CrrryOnPage$new(
   chrome_bin = pagedown::find_chrome(),
   chrome_port = httpuv::randomPort(),
@@ -617,10 +617,10 @@ test <- crrry::CrrryOnPage$new(
 )
 ```
 
-    Running '/Applications/Google 
-      Chrome.app/Contents/MacOS/Google Chrome' 
+    Running '/Applications/Google
+      Chrome.app/Contents/MacOS/Google Chrome'
       --no-first-run --headless \
-      '--user-data-dir=/Users/colin/Library/Application     
+      '--user-data-dir=/Users/colin/Library/Application
       Support/r-crrri/chrome-data-dir-thyhpptv' \
       '--remote-debugging-port=48938'
 
@@ -632,7 +632,7 @@ test$wait_for_shiny_ready()
     ✓ Shiny is still running
 
 ```{r 11-step-by-step-secure-38, eval = FALSE, include = FALSE, results = 'hide'}
-# See previous version of this code for a commented explanation 
+# See previous version of this code for a commented explanation
 test <- crrry::CrrryOnPage$new(
   chrome_bin = pagedown::find_chrome(),
   chrome_port = httpuv::randomPort(),
@@ -643,20 +643,20 @@ test$wait_for_shiny_ready()
 ```
 
 ```{r 11-step-by-step-secure-39, eval = FALSE, include=FALSE}
-# We are creating a first data.frame that records the launch 
+# We are creating a first data.frame that records the launch
 # of the container.
 results <- dockerstats::dockerstats("xmk2", extra = "launch")
 
 for (i in letters[1:10]){
   # We will be setting a letter for the package name input
   test$shiny_set_input(
-    "main_ui_1-left_ui_1-pkg_name_ui_1-package", 
+    "main_ui_1-left_ui_1-pkg_name_ui_1-package",
     i
   )
   # Once the input is set, we call dockerstats() for this container
   # and bind the results to the previously created data.frame
   results <- rbind(
-    results, 
+    results,
     dockerstats::dockerstats("xmk2", extra = i)
   )
 }
@@ -669,21 +669,21 @@ test$stop()
 ```
 
 ```{r 11-step-by-step-secure-40, eval = FALSE}
-# We are creating a first data.frame that records the launch 
+# We are creating a first data.frame that records the launch
 # of the container.
 results <- dockerstats::dockerstats("xmk2", extra = "launch")
 
 for (i in letters[1:10]){
   # We will be setting a letter for the package name input
   test$shiny_set_input(
-    "main_ui_1-left_ui_1-pkg_name_ui_1-package", 
+    "main_ui_1-left_ui_1-pkg_name_ui_1-package",
     i
   )
-  # Once the input is set, we call dockerstats() 
-  # for this container and bind the results to 
+  # Once the input is set, we call dockerstats()
+  # for this container and bind the results to
   # the previously created data.frame
   results <- rbind(
-    results, 
+    results,
     dockerstats::dockerstats("xmk2", extra = i)
   )
 }
@@ -724,7 +724,7 @@ for (i in letters[1:10]){
 try({
   # Stopping the docker container
   system("docker kill xmk2")
-  
+
   # Stopping the tests
   test$stop()
 })
@@ -741,35 +741,35 @@ results <- readRDS("dataset/results.RDS")
 
 ```{r 11-step-by-step-secure-43, fig.cap="(ref:dockerstatsusage)", eval = TRUE, cache=TRUE}
 library(dplyr, warn.conflicts = FALSE)
-# We are converting the MemUsage and record_time columns 
+# We are converting the MemUsage and record_time columns
 # to a format that can be used in {ggplot2}
-results <- results %>% 
+results <- results %>%
   mutate(
-    MemUsage = to_mib(MemUsage), 
+    MemUsage = to_mib(MemUsage),
     record_time = as.POSIXct(record_time)
   )
 library(ggplot2)
-# Using the record time as an x axis, 
-# then adding the MemUsage as a line (to watch the 
-# evolution over time), then we add the 'extra' column, 
-# that contains the letters, as vertical lines + as 
+# Using the record time as an x axis,
+# then adding the MemUsage as a line (to watch the
+# evolution over time), then we add the 'extra' column,
+# that contains the letters, as vertical lines + as
 # label
 ggplot(
-  data = results, 
+  data = results,
   aes(x = record_time)
-) + 
+) +
   geom_line(
     aes(y = MemUsage)
-  ) + 
+  ) +
   geom_vline(
     aes(xintercept = record_time)
-  ) + 
+  ) +
   geom_label(
     aes(
-      y = max(MemUsage), 
+      y = max(MemUsage),
       label = extra
     )
-  ) + 
+  ) +
   labs(
     title = "MemUsage of 10 inputs for package name"
   )
@@ -812,7 +812,7 @@ Traceback:
 1: rcpp_sf_to_geojson(sf, digits, factors_as_string)
 2: sf_geojson.sf(data)
 3: geojsonsf::sf_geojson(data)
-4: addGlifyPolygons(., data = pol_V1, color = les_couleurs, 
+4: addGlifyPolygons(., data = pol_V1, color = les_couleurs,
 popup = "val", opacity = 1)
 5: function_list[[i]](value)
 6: freduce(value, `_function_list`)
@@ -824,11 +824,11 @@ while (!.globals$stopped) {
 ..stacktracefloor..(serviceApp())
 Sys.sleep(0.001)    }})
 106: ..stacktraceoff..(captureStackTraces({
-while (!.globals$stopped) {                
+while (!.globals$stopped) {
 ..stacktracefloor..(serviceApp())
 Sys.sleep(0.001)    }}))
-107: runApp(Sys.getenv("SHINY_APP"), 
-port = port, 
+107: runApp(Sys.getenv("SHINY_APP"),
+port = port,
 launch.browser = FALSE)
 An irrecoverable exception occurred. R is aborting now ...
 ```
@@ -853,7 +853,7 @@ That means that you can have `{geojsonsf}` version `1.2.1` in one of your projec
 #### B. Using `{renv}` {.unnumbered}
 
 > Underlying the philosophy of renv is that any of your existing workflows should just work as they did before.
-> 
+>
 > _Introduction to renv_ (<https://rstudio.github.io/renv/articles/renv.html>)
 
 The first thing to do with `{renv}` is initiate it with the `init()` function.
@@ -943,7 +943,7 @@ If you decide to update a package in your project, and realize that this package
 There are more things you can do with `{renv}`.
 If you want to know more, we invite you to refer to the [official documentation](https://rstudio.github.io/renv).
 
-```{r 11-step-by-step-secure-49-bis include = FALSE}
+```{r 11-step-by-step-secure-49-bis, include = FALSE}
 unlink("script.R")
 ```
 
@@ -986,11 +986,11 @@ Let's take some time to understand this file, and detail how we could be buildin
 1.  `FROM`
 
 ```{r 11-step-by-step-secure-53, echo = FALSE, comment=""}
-# readLines("data-raw/Dockerfile")[1] %>% 
+# readLines("data-raw/Dockerfile")[1] %>%
 #   glue::as_glue()
 cat("FROM", paste0(
-    "rocker/r-ver:", 
-    R.Version()$major,".", 
+    "rocker/r-ver:",
+    R.Version()$major,".",
     R.Version()$minor
   ))
 ```
@@ -1033,7 +1033,7 @@ This Docker entry takes a folder or a file, and copies it inside the image.
 With `{golem}`, we are adding the current project, containing the app, to a folder called `/build_zone`.
 
 ```{r 11-step-by-step-secure-56, echo = FALSE, comment=""}
-readLines("data-raw/Dockerfile")[13] %>% 
+readLines("data-raw/Dockerfile")[13] %>%
   glue::as_glue()
 ```
 
@@ -1042,7 +1042,7 @@ readLines("data-raw/Dockerfile")[13] %>%
 This command defines which port of the container will be available from the outside of the container.
 
 ```{r 11-step-by-step-secure-57, echo = FALSE, comment=""}
-readLines("data-raw/Dockerfile")[16] %>% 
+readLines("data-raw/Dockerfile")[16] %>%
   glue::as_glue()
 ```
 
