--- a/11-step-by-step-secure.Rmd
+++ b/11-step-by-step-secure.Rmd
@@ -973,7 +973,7 @@ Same goes for your version of R.
 
 Good news!
 If you are building your app with `{golem}`, the creation of the `Dockerfile` is just one function away!
-If you have a look at the `03_deploy.R` file in the `dev` folder, you will find a series of functions that can create the `Dockerfile` for your project: either as a generic Docker image, or for `{shiny}`Proxy or Heroku.
+If you have a look at the `03_deploy.R` file in the `dev` folder, you will find a series of functions that can create the `Dockerfile` for your project: either as a generic Docker image, or for Shinyproxy or Heroku.
 
 For example, to create a `Dockerfile` for a `{golem}` project, you can run the following, from the root of your package:
 
