Fix punctuation typos across chapters

--- a/02-planning-ahead.Rmd
+++ b/02-planning-ahead.Rmd
@@ -13,7 +13,7 @@ Whatever your ambitions for your `{shiny}` application, you should take time tod
 A common thing you will hear about `{shiny}` is that it is a good prototyping tool.
 This cannot be denied.
 Building a Proof of Concept (PoC) for an app is relatively straightforward if you compare to what is needed to build applications in other languages.
-With `{shiny}`, you can build an "it works on my machine" web application in a couple of hours, and show it to your team, your boss, your investors.
+With `{shiny}`, you can build an "it works on my machine" web application in a couple of hours, and show it to your team, your boss, or your investors.
 Thanks to the way `{shiny}` was designed, you do not have to care about websockets, ports, HTML (HyperText Markup Language), JavaScript libraries, and all the things that are elegantly bundled into `{shiny}`.
 
 Hence, you can have a quick, hacky application that will work on your machine, and very rapidly.
@@ -31,7 +31,7 @@ The larger the codebase, the harder it is to untangle everything and make it wor
 In this book, we will present a framework called `{golem}`, which is a toolbox for building production-grade `{shiny}` applications.
 Even if `{golem}` is focused on production, there is no reason not to use it for your proof of concepts: starting a new `{golem}` project is relatively straightforward, and even if you do not use the advanced features, you can use it for very small apps.
 The benefit of starting straight inside a `{golem}` application really outweighs the cost.
-We hear a lot the question "When should I switch to `{golem}`?" The answer is simple: do not switch to `{golem}`, start with it.
+We often hear the question "When should I switch to `{golem}`?" The answer is simple: do not switch to `{golem}`; start with it.
 That way, you are getting ready for complexity, and if, one day, you need to turn this small app into a production app, the foundations are there.
 
 ### Develop with the KISS principle
@@ -85,10 +85,10 @@ The previous chapter introduced the notion of complexity in size, where the app 
 
 Splitting a `{shiny}` project is made possible by following two methods:
 
--   **Extract your core "non-reactive" functions, which we will also call the "business logic", and include them in external files**, so that you can work on these outside of the app.
+-   **Extract your core "non-reactive" functions, which we will also call the "business logic", and include them in external files**, so that you can work on them outside of the app.
     Working on independent functions to implement features will prevent you from relaunching the whole application every time you need to add something new.
 
--   **Split your app into `{shiny}` modules**, so that your app can be though of as a tree, making it possible for every developer to concentrate on one node, and only one, instead of having to think about the global infrastructure when implementing features.
+-   **Split your app into `{shiny}` modules**, so that your app can be thought of as a tree, making it possible for every developer to concentrate on one node, and only one, instead of having to think about the global infrastructure when implementing features.
 
 Figure \@ref(fig:02-planning-ahead-1) is, for example, a representation of a `{shiny}` application with modules and sub-modules.
 You will not be able to decipher the text inside the node, but the idea is to give you a sense of how a `{shiny}` application with modules can be organized and split into smaller pieces that are all related to each other in a tree form.
