--- a/10-step-by-step-build.Rmd
+++ b/10-step-by-step-build.Rmd
@@ -243,7 +243,7 @@ Continuous integration, on the other hand, is ensuring the software is still wor
 The idea is to add to the centralized version control system (for example, Git)[^step-by-step-build-6] a service like Travis CI, GitHub Action (if you are on GitHub), or GitLab CI (for GitLab) that runs a series of commands whenever something is integrated in the repository, i.e. every time a change to the codebase is made.
 In other words, every time a new piece of code is sent to the central repository, a service runs regression tests that check that the software is still in a valid, working state.
 
-[^step-by-step-build-6]: We will get back to version control in the Chapter \@ref(version-control), "Version Control"..
+[^step-by-step-build-6]: We will get back to version control in the Chapter \@ref(version-control), "Version Control".
 
 You can set up various continuous integration services automatically by using functions from the `{usethis}` package:
 
