--- a/19-appendix.Rmd
+++ b/19-appendix.Rmd
@@ -477,7 +477,7 @@ Once this is done, we will create/update the `.dockerignore` file at the root of
     Removing the installation of `libgit2-dev` solved the issue.
 
 Inside our `Dockerfile`, we will also change the default repo to use <https://packagemanager.rstudio.com/all/latest>, which proposes precompiled packages for our system, making the installation faster.
-We will also add an installation of NodeJS, which is needed by our application..
+We will also add an installation of NodeJS, which is needed by our application.
 
 Then, we can go to our terminal and compile the image!
 
