--- a/chapter-abstracts.Rmd
+++ b/chapter-abstracts.Rmd
@@ -26,7 +26,7 @@ How can we measure both these aspects when it comes to R and `{shiny}`?
 
 This second chapter of the book will cover a crucial concept when it comes to leading a successful software engineering project: planning. 
 
-In this chapter, the reader will be presented project management and planning in the context of a `{shiny}` project: why it's important to plan ahead, how to leverage the KISS principle, and how to practically organize a team of `{shiny}` developers, both from the tooling and management point of views.
+In this chapter, the reader will be presented project management and planning in the context of a `{shiny}` project: why it's important to plan ahead, how to leverage the KISS principle, and how to practically organize a team of `{shiny}` developers, both from the tooling and management points of view.
 
 ## Book Title -- Engineering Production-Grade Shiny Apps
 
@@ -36,7 +36,7 @@ In this chapter, the reader will be presented project management and planning in
 
 Chapter 3 will cover the technical aspects of structuring your `{shiny}` projects for production. 
 
-In this chapter, we will cover the importance of building a `{shiny}` application as a package and all the benefits that will come with this infrastructure choice: metadata, documentation, native testing, and the ability to leverage all the toolkit available to the R developers. Then, we will move to another key concept that will power any large-scale `{shiny}` application: modules. Finally, we will introduce why convention matters when it comes to working as a team, and how to put this into practice when building applications using the `{golem}` framework.
+In this chapter, we will cover the importance of building a `{shiny}` application as a package and all the benefits that will come with this infrastructure choice: metadata, documentation, native testing, and the ability to leverage all the toolkit available to R developers. Then, we will move to another key concept that will power any large-scale `{shiny}` application: modules. Finally, we will introduce why convention matters when it comes to working as a team, and how to put this into practice when building applications using the `{golem}` framework.
  
 ## Book Title – Engineering Production-Grade Shiny Apps
 
@@ -44,9 +44,9 @@ In this chapter, we will cover the importance of building a `{shiny}` applicatio
 
 ## Chapter Number & Title – Chapter 4, Introduction to {golem}
 
-Chapter will introduce `{golem}`, a framework for building production-grade `{shiny}` applications. 
+This chapter will introduce `{golem}`, a framework for building production-grade `{shiny}` applications.
 
-In this chapter, we will give an introduction to the general philosophy behind `{golem}`, and will describe in details the structure of a `{golem}` project: what makes it similar to a standard R package (`DESCRIPTION`, `NAMESPACE`, `man/`, ...), and what makes it unique. Notably, we will spend some time reviewing the functions contained in the default `{golem}` project, the very same functions that will be the starting point of your future `{shiny}` applications.
+In this chapter, we will give an introduction to the general philosophy behind `{golem}`, and will describe in detail the structure of a `{golem}` project: what makes it similar to a standard R package (`DESCRIPTION`, `NAMESPACE`, `man/`, ...), and what makes it unique. Notably, we will spend some time reviewing the functions contained in the default `{golem}` project, the very same functions that will be the starting point of your future `{shiny}` applications.
 
 ## Book Title -- Engineering Production-Grade Shiny Apps
 
@@ -62,23 +62,23 @@ This fifth chapter succinctly presents the steps of the workflow later developed
 
 ## Chapter Number & Title – Chapter 6, UX Matters
 
-Chapter 6 covers the basics of what make a web application user-friendly. 
+Chapter 6 covers the basics of what makes a web application user-friendly.
 
 First, we cover the importance of simplicity when it comes to designing an interface, keeping in mind the "Don't make me think" mantra. When reading the web, users tend to scan, instead of cautiously make logical decisions about how to behave. In other word, they do not really read but tend to scan the content, making it crucial for the page to be as simple as possible, so that the visitors easily find their way through the interface. 
 
-Then, we cover the importance of lowering complexity of a software by restraining from implementing way too many features: when building an application with `{shiny}`, it's crucial to think about the necessity of the features we're implementing, so that we don't end with too much reactivity, and/or an application that is way to slow to be used. 
+Then, we cover the importance of lowering complexity of a software by restraining from implementing way too many features: when building an application with `{shiny}`, it's crucial to think about the necessity of the features we're implementing, so that we don't end with too much reactivity, and/or an application that is way too slow to be used.
 
-Finally, we cover one of the most important topic when it comes to making a successful application: accessibility. In other words, how do we make an application usable by the widest audience possible? How do we work on making our application usable by people with visual, mobility, or cognitive disabilities. This chapter will introduce the notion of semantic HTML in the context of `{shiny}`, structure, and, something important in a context where we build applications with data visualization: choice of colors.
+Finally, we cover one of the most important topic when it comes to making a successful application: accessibility. In other words, how do we make an application usable by the widest audience possible? How do we work on making our application usable by people with visual, mobility, or cognitive disabilities? This chapter will introduce the notion of semantic HTML in the context of `{shiny}`, structure, and, something important in a context where we build applications with data visualization: choice of colors.
 
 ## Book Title -- Engineering Production-Grade Shiny Apps
 
 ## Chapter Author -- Colin Fay
 
-## Chapter Number & Title -- Chapter 7,
+## Chapter Number & Title -- Chapter 7, Step by Step Design
 
-This seventh chapter covers the need for getting yourself prepared upfront when it comes to engineering a `{shiny}`. 
+This seventh chapter covers the need for getting yourself prepared upfront when it comes to engineering a `{shiny}` application.
 
-Here, we will cover the importance of starting with planning, thinking, and evaluating existing solution before rushing into coding. We will also introduce concept maps, and give a series of tools to evaluate the project before even writing a single line of code. In other words, we'll see how to get started with user interview, how to create personas, and why it's important to evaluate pre-existing codebase before starting the project. 
+Here, we will cover the importance of starting with planning, thinking, and evaluating existing solutions before rushing into coding. We will also introduce concept maps, and give a series of tools to evaluate the project before even writing a single line of code. In other words, we'll see how to get started with user interviews, how to create personas, and why it's important to evaluate pre-existing codebases before starting the project.
 
 ## Book Title – Engineering Production-Grade Shiny Apps
 
@@ -156,7 +156,7 @@ This chapter starts with a checklist of things to do before sending an applicati
 
 Chapter 14 starts with the reflection around the necessity to optimize, and around managing the optimization process when building your application. 
 
-When building a `{shiny}` application that will be send to production, schedule matters, and focusing on optimizing too soon, or too much, might endanger the whole success of the project. On the other hand, choices made when optimizing the application might have a big impact on the longevity of the project. 
+When building a `{shiny}` application that will be sent to production, schedule matters, and focusing on optimizing too soon, or too much, might endanger the whole success of the project. On the other hand, choices made when optimizing the application might have a big impact on the longevity of the project.
 
 If you decide to go along the optimization road, you better start by benchmarking what and where you need to optimize, so that  you're sure you're not working on optimizing parts of the application that do not need to be optimized. The second part of the chapter presents tools you can use to perform this code profiling. 
 
@@ -166,7 +166,7 @@ If you decide to go along the optimization road, you better start by benchmarkin
 
 ## Chapter Number & Title -- Chapter 15, Common Application Caveats
 
-Some code bottlenecks (parts of the codebase that slow the application) might not be caught by simple profiling tools: sometime a slow application can be explained by caveats in the way the application is designed. 
+Some code bottlenecks (parts of the codebase that slow the application) might not be caught by simple profiling tools: sometimes a slow application can be explained by caveats in the way the application is designed.
 
 This chapter will present three main sources of design patterns that might be slowing your application: uncontrolled reactivity, where too much happens (also known as "reactivity hell"), making R perform too much computation, and data source management.  
 
@@ -177,9 +177,9 @@ This chapter will present three main sources of design patterns that might be sl
 
 ## Chapter Number & Title – Chapter 16, Optimizing {shiny} Code
 
-There are several methods you can choose to optimize your application so that it works faster, and handles memory in a more efficient way. This chapter presents three of them. 
+There are several methods you can choose to optimize your application so that it works faster and handles memory in a more efficient way. This chapter presents three of them.
 
-First, focusing on the R code itself. Then, caching elements. Caching is the process of storing computation results from a function so that it can be reused, instead of recomputing the function every time. In this chapter, we will see how you can implement caching with R code, and how to use the `{shiny}`-specific functions to do that. Finally, we will present a way to build asynchronousity inside a `{shiny}` application using `{promises}` and `{future}`.
+First, focusing on the R code itself. Then, caching elements. Caching is the process of storing computation results from a function so that it can be reused, instead of recomputing the function every time. In this chapter, we will see how you can implement caching with R code, and how to use the `{shiny}`-specific functions to do that. Finally, we will present a way to build asynchronicity inside a `{shiny}` application using `{promises}` and `{future}`.
 
 ## Book Title – Engineering Production-Grade Shiny Apps
 
@@ -187,7 +187,7 @@ First, focusing on the R code itself. Then, caching elements. Caching is the pro
 
 ## Chapter Number & Title – Chapter 17, Using JavaScript
 
-One of the best way to enhance your application, in the long run, is to get comfortable with JavaScript, a scripting language that runs in your web browser. 
+One of the best ways to enhance your application, in the long run, is to get comfortable with JavaScript, a scripting language that runs in your web browser.
 
 With JavaScript, you'll be able to enhance the user experience by leveraging in-browser events, and lower the computation performed by R as you can perform them inside the browser, leaving more space to the server for computation. And in the long run, when you're comfortable with JavaScript, a whole world of `{shiny}` extensions opens. 
 
