--- a/17-javascript.Rmd
+++ b/17-javascript.Rmd
@@ -54,8 +54,7 @@ It's important to note here that the **communication happens in both directions*
 In fact, when we write a piece of code like `sliderInput("first_input", "Select a number", 1, 10, 5)`, what we are doing is creating a binding between JavaScript and R, where the JavaScript runtime (in the browser) listens to any event happening on the slider with the id `"plop"`, and whenever it detects that something happens to this element, something (most of the time its value) is sent back to R, and R does computation based on that value.
 With `output$bla <- renderPlot({})`, what we are doing is making the two communicate the other way around: we are telling JavaScript to listen to any incoming data from R for the `id` `"bla"`, and whenever JavaScript sees incoming data from R, it puts it into the proper HTML tag (here, JavaScript inserts the image received from R in the `<img>` tags with the id `bla`).
 
-Even if everything is written in R, we **are** writing a web application, i.e..
-HTML, CSS and JavaScript elements.
+Even if everything is written in R, we **are** writing a web application—i.e., one built from HTML, CSS, and JavaScript elements.
 Once you have realized that, the possibilities are endless: in fact almost anything doable in a "classic" web app can be done in `{shiny}` with a little bit of tweaking.
 What this also implies is that getting (even a little bit) better at writing HTML, CSS, and especially JavaScript will make your app better, smaller, and more user-friendly, as JavaScript is a language that has been designed to interact with a web page: change element appearances, hide and show things, click somewhere, show alerts and prompts, etc.
 **Knowing just enough JavaScript can improve the quality of your app**: especially when you have been using R to render some complex UIs: think conditional panels, simulating a button click from the server, hide and show elements, etc.
@@ -64,9 +63,9 @@ All these things are good examples of where you should be using JavaScript inste
 Moreover, the number of JavaScript libraries available on the web is tremendous; and the good news is that `{shiny}` has everything it needs to bundle external JavaScript libraries inside your application.[^javascript-2]
 
 [^javascript-2]: This can also be done by wrapping a JS libraries inside a package, which will later be used inside an application.
-    See for example `{glouton}` [@R-glouton], which is a wrapper around the [`js-cookie` >https://github.com/js-cookie/js-cookie> JavaScript library.
+    See for example `{glouton}` [@R-glouton], which is a wrapper around the [`js-cookie`](https://github.com/js-cookie/js-cookie) JavaScript library.
 
-This is what this section of the book aims at: giving you just enough JavaScript knowledge to lighten your `{shiny}` app, in order to improve the global user and developer experience.
+This is what this section of the book aims to do: give you just enough JavaScript knowledge to lighten your `{shiny}` app, improving the overall user and developer experience.
 In this chapter, we will first review some JavaScript basics which can be used "client-side" only, i.e. only in your browser.
 Then, we will talk about making R and JS communicate with each other, and explore some common patterns for JavaScript in `{shiny}`.
 Finally, we will quickly present some of the functions available in `{golem}` [@R-golem] that can be used to launch JavaScript.
